# sevinch_med

./: .gitignore  common.yml  docker-compose.yml  pyproject.toml  readme.md  sample.env  update_server.sh
.github/sample_workflows/: main.yml
.github/workflows/: main.yml
django/: default_data.json  flower.conf.py  gunicorn.conf.py  req.txt
django/apps/base_app/: apps.py
django/apps/clients/: admin.py  models.py
django/apps/main/: admin.py  models.py
django/apps/users/: admin.py  forms.py  models.py
django/conf/: celery.py  pagination.py  renderer.py  settings.py  urls.py
django/services/: clients.py  index.py  procedures.py  statistics.py  transfers.py
django/templates/: base.html  index.html  structure.html  test.html
django/templates/auth/: login.html
django/templates/clients/: clients_list.html  create_modal.html  update_modal.html
django/templates/parts/: alerts.html  footer.html  head.html  header.html  scripts.html  sidebar.html
django/templates/printable_pages/: detection_check.html  payment_check.html  test.html
django/templates/procedures/: list.html  test.html  update.html
django/templates/referrals/: create_modal.html  pay_referral_modal.html  referral_person_list.html  update_modal.html
django/templates/statistics/: list.html
django/templates/transfers/: create_modal.html  list.html
django/templates/v3.22.0/: changelog.html  index.html  widgets.html
django/web/: logics.py  urls.py  views.py
django/web/auth/: urls.py  views.py
django/web/clients/: filters.py  serializers.py  (+2 more)
etc/pypline/: .black  .flake8  .isort.cfg
(+269 files in other folders)
